# GDV1_WS17

./: .gitignore  README.md
Ex1/: Präsentation1.pptx  abgabe.aux  abgabe.tex  script p3.cs
Ex1p/Framework OpenGL OFF LSA/: CMakeLists.txt  TriangleMesh.cpp  main.cpp  main.h
Ex1p/Framework_OpenGL_OFF_LSA/: CMakeLists.txt  TriangleMesh.cpp  TriangleMesh.h  main.cpp  main.h
Ex2/: abgabe.tex  px.pptx
Ex2p/: CMakeLists.txt  TriangleMesh.cpp  TriangleMesh.h  Vec3.h  main.cpp  main.h  shader.h
Ex2p/Shader/: FlatGreyShader.frag  FlatGreyShader.vert  NormalShader.frag  NormalShader.vert  Toonshader.frag  Toonshader.vert  WaveShader.frag  WaveShader.vert
Ex3/: 2b.xcf  2c.xcf  abgabe.tex
Ex3p/: CMakeLists.txt  ClipPlane.h  TriangleMesh.cpp  TriangleMesh.h  heightmap.pgm  imageloader.cpp  imageloader.h  main.cpp  main.h  plane.cpp  plane.h  terrain.cpp  terrain.h  viewFrustum.cpp  viewFrustum.h
Ex3p/Textures/skybox2/: neg_x.ppm  neg_y.ppm  neg_z.ppm  pos_x.ppm  pos_y.ppm  pos_z.ppm
Ex3p/Textures/skybox3/: neg_y.ppm  pos_y.ppm
Ex4/: 1b.txt  2a.txt  abgabe.tex  summed_area_tables.py
Ex4p/: CMakeLists.txt  ClipPlane.h  Ray.h  TriangleMesh.cpp  TriangleMesh.h  imageloader.cpp  main.cpp  main.h
